# pymod

./: .flake8  .gitignore  README.md  pymod.py  pyproject.toml  versions.md
pymod/: __about__.py  __init__.py  __main__.py  pymod.py
test_mods/: fine2.mod  glissando.mod  loud.mod  offsetweird.mod  patdelay.mod  simpy.mod  tremolo.mod  volslide2.mod
tests/: __init__.py  render_test.py
tests/modules/: arpdesync.mod  arpeggio.mod  arptimings.mod  basschan.mod  breaks.mod  breaks2.mod  cuts.mod  delay.mod  delay2.mod  delayfx.mod  delaysim.mod  delayskip.mod  extended.mod  filter.mod  fine.mod  fineport.mod  fx.mod  howmanypatterns.mod  line.mod  loop.mod  loopchange.mod  loopchange2.mod  loud2.mod  loud3.mod  nonexistence.mod  nosamp.mod  offset.mod  offsetdelay.mod  offsetness.mod  pan.mod  patloop2.mod  port1.mod  port2.mod  port3.mod  portfunny.mod  portlimit.mod  position.mod  pwm.mod  reverse.mod  setfine.mod  (+11 more)
