[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymod"
description = "Python program that plays/renders ProTracker modules using PyAudio."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["protracker", "soundtracker", "amiga"]
authors = [
  { name = "Presley Peters", email = "presleypeters04@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyaudio"]

dynamic = ["version"]

[project.urls]
Homepage = "https://verycheapwebsite.rf.gd/pymod"

[tool.hatch.version]
path = "pymod/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["pymod"]

[project.scripts]
pymod = "pymod.__main__:main"
