[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymod-amiga"
description = "Python program that plays/renders ProTracker modules using PyAudio."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["protracker", "soundtracker", "amiga"]
authors = [
  { name = "Presley Peters", email = "presleypeters04@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyaudio"]
dynamic = ["version"]

[project.urls]
Homepage = "https://verycheapwebsite.rf.gd/pymod"
"Source Code" = "https://github.com/Prezzodaman/pymod"
"Bug Tracker" = "https://github.com/Prezzodaman/pymod/issues"

[tool.setuptools_scm]

[tool.hatch.version]
path = "pymod/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pymod"]

[tool.hatch.envs.default]
dependencies = [ "pytest", "pytest-cov" ]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pymod --cov=tests"
no-cov = "cov --no-cov"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[[tool.hatch.envs.test.matrix]]
python = ["38"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["pymod/__about__.py"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
pymod = "pymod.__main__:main"
